fixes tooltip and modal z-index conflicts

--- a/app/javascript/stylesheets/_variables.scss
+++ b/app/javascript/stylesheets/_variables.scss
@@ -50,3 +50,5 @@ $navbar-dropdown-arrow: $navbar-item-color;
 
 $menu-item-active-background-color: $primary;
 $section-padding: 1.5rem;
+$modal-z: 40;
+$tooltip-z-index: 39;
